--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Calendar-Model
+0.04	02/03/2013
+	Made pod tests author only
+        Added wordpress widget style example
+
 0.03    21/02/2013
 	Added some details in POD SYNOPSIS
 	Added new get_day method to Model::Calendar
